Closed
Bug 1607815
Opened 6 years ago
Closed 6 years ago
MOZ_ASSERT(aStatusCode >= 300) in HttpProxyResponseToErrorCode is wrong
Categories
(Core :: Networking: HTTP, defect, P1)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla75
| Tracking | Status | |
|---|---|---|
| firefox75 | --- | fixed |
People
(Reporter: michal, Assigned: kershaw)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
The assertion at https://searchfox.org/mozilla-central/rev/a92ed79b0bc746159fc31af1586adbfa9e45e264/netwerk/protocol/http/nsHttp.cpp#845 seems to be wrong because HttpProxyResponseToErrorCode() can be called from SpdyConnectTransaction::MapStreamToHttpConnection() with almost whatever status code. I hit this with the testcase from bug 1601712.
Kershaw, can you please revise this code?
Flags: needinfo?(kershaw)
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → kershaw
Flags: needinfo?(kershaw)
Priority: -- → P1
Whiteboard: [necko-triaged]
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a67a8ec572fd
Remove unnecessary MOZ_ASSERT r=dragana
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in
before you can comment on or make changes to this bug.
Description
•