Bug 1607815 - Remove unnecessary MOZ_ASSERT r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D61688

--HG--
extra : moz-landing-system : lando